force-app/main/default/objects/Contact/fields/Baptism_Date__c.field-meta.xml
<CustomField>
    <fullName>Baptism_Date__c</fullName>
    <description>Date when individual was Baptized if available</description>
    <inlineHelpText>Date when individual was Baptized if available</inlineHelpText>
    <label>Baptism Date</label>
    <type>Date</type>
</CustomField>