force-app/main/default/objects/Contact/fields/Baptism_Status__c.field-meta.xml
<CustomField>
    <fullName>Baptism_Status__c</fullName>
    <label>Baptism Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>