force-app/main/default/objects/Contact/fields/Community_Group_Leader__c.field-meta.xml
<CustomField>
    <fullName>Community_Group_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community Group Leader</label>
    <type>Checkbox</type>
</CustomField>