force-app/main/default/objects/Contact/fields/Followup__c.field-meta.xml
<CustomField>
    <fullName>Followup__c</fullName>
    <label>Followup</label>
    <type>TextArea</type>
</CustomField>